<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samuelhimself.bible1.SafetyTips">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="57dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="5dp"
        android:text="@string/safetyTips"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="14pt"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="29dp"
        android:text="@string/textForSafetyTips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        >
        <Button
            android:id="@+id/hm14"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:fontFamily="sans-serif"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/parkingPoints"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:fontFamily="sans-serif"
            />


        <Button
            android:id="@+id/more14"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:fontFamily="sans-serif"
            />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
