<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samuelhimself.bible1.Events">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mytoolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffff"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:layout_marginTop="53dp"
        android:text="@string/events"
        android:textSize="20pt"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="252dp"
        android:gravity="center"
        android:text="@string/crossCountryComingSoon"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        >
        <Button
            android:id="@+id/hm6"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:fontFamily="sans-serif"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/parkingPoints"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:fontFamily="sans-serif"
            />


        <Button
            android:id="@+id/more6"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more"
            android:textAllCaps="false"
            android:textSize="7pt"
            android:fontFamily="sans-serif"
            />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
