<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/more111"
        android:title="@string/profile"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_tutorial"-->
        <!--android:orderInCategory="100"-->
        <!--android:icon="@drawable/more111"-->
        <!--android:title="@string/tutorial"/>-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_safetytips"
        android:orderInCategory="100"
        android:icon="@drawable/more111"
        android:title="@string/safetyTips"/>
        <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/action_support"-->
        <!--android:orderInCategory="100"-->
        <!--android:icon="@drawable/more111"-->
        <!--android:title="@string/support"/>-->
    <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/action_events"-->
        <!--android:orderInCategory="100"-->
        <!--android:icon="@drawable/more111"-->
        <!--android:title="Events and Promos"/>-->
    <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/action_share"-->
        <!--android:orderInCategory="100"-->
        <!--android:icon="@drawable/more111"-->
        <!--android:title="Share Application"/>-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_termsandconds"
        android:orderInCategory="100"
        android:icon="@drawable/more111"
        android:title="@string/terms_and_conditions"/>
        <!--app:showAsAction="never" />-->
</menu>
